# bitbox-da14531-firmware

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  arm.cmake  ci.sh  dialog-sdk.cmake  ldscript_DA14531.lds.S
.github/workflows/: ci.yml
config/: SEGGER_RTT_Conf.h  da14531_config_advanced.h  da14531_config_basic.h  user_callback_config.h  user_config.h  user_modules_config.h  user_periph_setup.h  user_profiles_config.h
releases/: README.md  assertion-template.txt
releases/pubkeys/: sutterseba.asc
releases/v1/: assertion-benma.sig  assertion-nickez.sig  assertion-sutterseba.sig  assertion.txt
releases/v2/: assertion-benma.sig  assertion-nickez.sig  assertion.txt
scripts/: dockerenv.sh  get_version  print_metadata
sdk-patches/: 0003-remove-central-config-usage.patch  0004-irk.patch  0005-always-read-scan-rsp-data-from-live.patch  0006-handle-uart-isr-in-user-code.patch  0007-load-bond-db-from-mcu.patch  README.md
src/: debug.c  debug.h  serial_link.c  serial_link.h  uart_task.c  uart_task.h  user_app.c  user_app.h  user_custs1_def.c  user_custs1_def.h  user_custs1_impl.c  user_custs1_impl.h  user_custs_config.c  user_custs_config.h  user_periph_setup.c  util.h
